--- a/src/app/components/sequences/MessagesTable.module.scss
+++ b/src/app/components/sequences/MessagesTable.module.scss
@@ -49,6 +49,7 @@
 
 	tbody {
 		tr {
+			line-height: 1.25;
 			&:nth-child(odd) {
 				background-color: var(--background-tertiary);
 			}
@@ -66,7 +67,7 @@
 			td {
 				padding: 0.5rem 1rem;
 				max-width: 0; /* Force cells to respect parent column width */
-
+				line-height: 1.25;
 				white-space: nowrap;
 				overflow-x: auto;
 				scrollbar-width: none; /* Firefox */
