--- a/src/app/components/sequences/sequencesTable.module.scss
+++ b/src/app/components/sequences/sequencesTable.module.scss
@@ -45,6 +45,8 @@
 
 	tbody {
 		tr {
+			line-height: 1.25;
+
 			&:nth-child(odd) {
 				background-color: var(--background-tertiary);
 			}
@@ -62,7 +64,7 @@
 			td {
 				padding: 0.5rem 1rem;
 				max-width: 0; /* Force cells to respect parent column width */
-
+				line-height: 1.25;
 				white-space: nowrap;
 				overflow-x: auto;
 				scrollbar-width: none; /* Firefox */
