added in active and inactive status for activities table

--- a/src/app/components/sequences/tableStyles.module.scss
+++ b/src/app/components/sequences/tableStyles.module.scss
@@ -99,6 +99,20 @@
 						}
 					}
 				}
+
+				.active {
+					color: var(--color-primary);
+					font-weight: 600;
+				}
+				.inactive {
+					color: var(--text-muted);
+					font-style: italic;
+				}
+				.na {
+					color: var(--text-muted);
+					opacity: 0.5;
+					font-style: italic;
+				}
 			}
 
 			&.expanded-row {
