more ui ux styling added to activities table

--- a/src/app/components/sequences/tableStyles.module.scss
+++ b/src/app/components/sequences/tableStyles.module.scss
@@ -125,6 +125,10 @@
 				background: var(--gradient-primary-lighter);
 			}
 
+			&.selectedMessage {
+				background: var(--background-tertiary) !important;
+			}
+
 			&.nested {
 				&.selected {
 					background: var(--gradient-greyscale-lighter);
